fixed some changes and add sD in formsContract.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -887,8 +887,7 @@
     <string name="kf3gh1"> هيٺيان سوال پڙهو. پاڻياٺ جي لسٽ پڙهو هڪ هڪ ڪري ۽ ها يا نه ته نشان لڳايو. لسٽ مڪمل ڪرڻ کان پوءِ سوال نمبر 6.6 جاري رکو ( ساڄي پاسي ڪالم کي ڏسو) انهن شين جي لاِ ) 6.5، بي ، سي ۽ ايف) جتي جواب ها ۾ اچي ٿو.  </string>
 
     <string name="kf3g05"> هاڻي آءُ اوهان کان پڻياٺ جي باري ۾ پڇڻ چاهيندس جيڪي اوهان جي ٻار ڪالھ ڏينهن يا رات جي وقت ورتا. </string>
-    <string name="kf3g05h1"> ڇا ( نالو) وٺي هيٺين مان ڪجھ ورتو؟ </string>
-    <string name="kf3g05h2"> هيٺين لسٽ پڙهي ٻڌايو ، صاف پاڻي کان وٺي. </string>
+    <string name="kf3g05h1"> ڇا ( نالو) وٺي هيٺين مان ڪجھ ورتو؟ هيٺين لسٽ پڙهي ٻڌايو ، صاف پاڻي کان وٺي. </string>
 
     <string name="kf3g06"> ڪيترا دفعا ڏينهن يا رات جي وقت ڏنل لسٽ کاڌا کاڌا. </string>
     <string name="kf3g06h1"> سامان استعمال ڪيو </string>
@@ -926,6 +925,7 @@
     <string name="kf3g08h1"> جيڪڏهن ها ته وڌيڪ پڇو  ڪهڙي قسم جا نرم يا ٺوس غذا کاڌي؟ </string>
 
     <string name="kf3g09"> نالو وٺي پڇو ته ڪيترا دفعا ٻار ڪالھ ڏينهن يا رات جي وقت نرم، ٺوس غذا کاڌي پاڻياٺ کانسواءِ؟ </string>
+    <string name="kf3g09a"> ڪيترا دفعا </string>
 
     <string name="kf3g10"> نالو وٺي پڇو ته ڇا ٻار ڪالھ ڏينهن يا رات جي وقت فيڊر يا ٻنڊ جي ذريعي ڪجھ پيتو؟ </string>
 
