--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -727,15 +727,17 @@
 
 
     <string name="kf3d11"> توهان 24 ڪلاڪن جي دوران اندازن گھڻا دفعا کير/ٿڃ پياريو؟ </string>
-    <string name="kf3d11a"> وقت جو تعداد </string>
+    <string name="kf3d11a"> ڪيترا ڀيرا </string>
 
     <string name="kf3d12"> ڇا توهان پنهنجي ٻار کي صرف ۽ صرف پنهنجي ٿڃ پياريو ٿا ؟ (اڪسڪليوزو جو مطلب آهي صرف ماءَ جو کير ۽ صرف ڪا دوا) </string>
 
 
     <string name="kf3d13"> توهان ڪيترن ڪلاڪن کان پنهنجي ٻآر کي صرف ۽ صرف پنهنجي ٿڃ تي رکيو آهي / صرف پنهنجي ٿڃ پياري آهي؟ </string>
+    <string name="kf3d13a"> ڪيترا ڀيرا </string>
 
 
-    <string name="kf3d14"> ڪيتري  ڏينهن  تائين توهان پنهنجي ٻار کي صرف ۽ صرف پنهنجو کير/ٿڃ پياريو. </string>
+    <string name="kf3d14"> ڪيتري  ڏينهن  تائين توهان پنهنجي ٻار کي صرف ۽ صرف پنهنجو کير / ٿڃ پياريو. </string>
+    <string name="kf3d14a"> ڪيترا ڏينهن </string>
 
 
     <string name="kf3d15"> ڇا توهان پنهنجي کير کان سواءِ ٻار کي ٻيو ڪجھ ڏنو؟ ماءُ جي کير کان علاوه پاڻي، جوس ۽ ٻي ڪا شيءِ ڏني وئي </string>
