Set mortality layout section.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1036,4 +1036,119 @@
     <string name="f3_hE">NEWBORN’S GROWTH ASSESSMENT (DAY 14, 28, 59, 120, 180, 365)</string>
     <string name="f3_hF">KMC TEACHING (FOR INTERVENTION AND CONTROL ARMS ONLY) (DAY 28)</string>
 
+
+
+    <!--Mortality-->
+    <string name="kmcrapidneonatalmortalitysurvey_mainheading"> ۾ نون ڄاول ٻارن جي موت بابت سروي KMC:  ۾ نون ڄاول ٻارن جي موت بابت سروي KMC</string>
+    <string name="app_name">  </string>
+    <string name="btnSync">Download Data</string>
+    <string name="btnUpload">Upload Data</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Login</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="splashText"> </string>
+    <string name="splashText2">  </string>
+    <string name="check_pending_forms">CHECK PENDING FORMS</string>
+    <string name="open_new_form">OPEN NEW FORM</string>
+    <string name="records_summary">Records Summary</string>
+    <string name="main_menu">Main Menu</string>
+    <string name="only_for_testing">ONLY FOR TESTING</string>
+    <string name="database">Database</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="no"> نہیں </string>
+    <string name="dkn"> معلوم نہیں </string>
+    <string name="none"> کوئی نہیں </string>
+    <string name="never"> کبھی نہیں </string>
+    <string name="na"> قابل اطلاق / دستیاب نہیں  </string>
+    <string name="nap"> قابل اطلاق نہیں </string>
+    <string name="nav"> دستیاب نہیں </string>
+    <string name="ref"> انکار کر دیا </string>
+    <string name="other"> دیگر </string>
+    <string name="specify"> وضاحت کریں </string>
+    <string name="year"> سال </string>
+    <string name="month"> مہینہ </string>
+    <string name="weeks"> ہفتے </string>
+    <string name="days"> دن </string>
+    <string name="hours"> گھنٹے </string>
+    <string name="minutes"> منٹ </string>
+    <string name="kg"> کلوگرام </string>
+    <string name="km"> کلومیٹر </string>
+    <string name="cm"> سینٹی میٹر </string>
+    <string name="in"> انچ </string>
+    <string name="rupees"> روپے </string>
+    <string name="num"> اعداد </string>
+    <string name="name"> نام </string>
+    <string name="contactnum"> رابطہ نمبر </string>
+    <string name="checkHHpresent"> گھر کے سربراہ کا نام لائن لسٹنگ ڈیٹا سے مطابقت رکھتا ہے۔ </string>
+    <string name="newHHheadname"> نیا سربراہ کا نام </string>
+    <string name="nmq101">داخلا جو علائقو</string>
+    <string name="nmq101a">جوهي</string>
+    <string name="nmq101b">ڪي اين شاھ</string>
+    <string name="nmq102">يونين ڪائونسل جونالو.</string>
+    <string name="nmq103">ڳوٺ جو نالو</string>
+    <string name="nmq104">داخل ٿيل ماءُ جو سڃاڻپ نمبر</string>
+    <string name="nmq105">داخل ٿيل ماءُ جو نالو</string>
+    <string name="nmq106">نئي ڄاول ٻارجواسٽيڊي نمبر</string>
+    <string name="nmq107">ٻارجو نالو</string>
+    <string name="nmq108">ٻار جي جنس</string>
+    <string name="nmq108a">ڇوڪرو</string>
+    <string name="nmq108b">ڇوڪري</string>
+    <string name="nmq109">ڄمڻ وقت جو وزن لکو </string>
+    <string name="nmq201">ٻار جي موجوده صورت حال</string>
+    <string name="nmq201a">ٻار زندهه آهي</string>
+    <string name="nmq201b">ٻار زندهه نه آهي</string>
+    <string name="nmq202">ٻار جي موجوده عمر</string>
+    <string name="nmq202m">مهينا</string>
+    <string name="nmq202d">ڏينهن</string>
+    <string name="nmq203">ٻار جي ڄمڻ کانپوءِ 28 ڏينهن تائين جي صورت حال</string>
+    <string name="nmq203a">ٻار زندهه هئو</string>
+    <string name="nmq203b">ٻار زندهه نه هئو</string>
+    <string name="nmq204">جيڪڏهن ٻار زندهه نه هئو، ته ميڊيڪل رڪارڊ مطابق ان جي موت جو سبب ڪهڙو هيو؟</string>
+    <string name="nmq20401">وزن گھٽ</string>
+    <string name="nmq20402">آڪسيجن جي گهٽتائي</string>
+    <string name="nmq20403">(ويم جي دوران پيچيدگيون ( ٻارنيرو ٿي ويو</string>
+    <string name="nmq20404">انفيڪشن</string>
+    <string name="nmq20405">بخار</string>
+    <string name="nmq20406">پيدائشي نخص</string>
+    <string name="nmq20407">پيدائشي دل جي بيماري</string>
+    <string name="nmq20408">ساهه جو مسئلو</string>
+    <string name="nmq20409">جهٽڪا</string>
+    <string name="nmq204010">نمونيا </string>
+    <string name="nmq204011">سائي</string>
+    <string name="nmq204098">خبر نه آهي</string>
+    <string name="nmq204096">وڌيڪ وضاحت ڪيو</string>
+    <string name="nmq205">ٻار ڪٿي فوت ٿيو؟</string>
+    <string name="nmq20501">گھر ۾</string>
+    <string name="nmq20502">پرائيويٽ اسپتال</string>
+    <string name="nmq20503">ڊي ايڇ ڪيو۾</string>
+    <string name="nmq20504">ٽي ايڇ ڪيو۾</string>
+    <string name="nmq20505">بي ايڇ يو ۾</string>
+    <string name="nmq20506">آر ايڇ سي ۾</string>
+    <string name="nmq20507">رستي تي</string>
+    <string name="nmq205096">وڌيڪ وضاحت ڪيو</string>
+    <string name="nmq206">مرڻ وقت ٻار جي عمر ڪيتري هئي</string>
+    <string name="nmq206h">ڪلاڪن ۾</string>
+    <string name="nmq206d">ڏينهن ۾</string>
+
+    <string name='Q_nmq101'>nmq101</string>
+    <string name='Q_nmq102'>nmq102</string>
+    <string name='Q_nmq103'>nmq103</string>
+    <string name='Q_nmq104'>nmq104</string>
+    <string name='Q_nmq105'>nmq105</string>
+    <string name='Q_nmq106'>nmq106</string>
+    <string name='Q_nmq107'>nmq107</string>
+    <string name='Q_nmq108'>nmq108</string>
+    <string name='Q_nmq109'>nmq109</string>
+    <string name='Q_nmq201'>nmq201</string>
+    <string name='Q_nmq202'>nmq202</string>
+    <string name='Q_nmq203'>nmq203</string>
+    <string name='Q_nmq204'>nmq204</string>
+    <string name='Q_nmq205'>nmq205</string>
+    <string name='Q_nmq206'>nmq206</string>
+
+
+
 </resources>
