*Update range and add one question instruct by Amjad

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1014,6 +1014,7 @@
     <string name="kf2a3"> رابطي جو نمبر </string>
     <string name="kf2a4"> گهر جي فردن جو تعداد </string>
     <string name="kf2a5"> 5 سالن کان گهٽ عمر وارن ٻارن جو ڪل تعداد </string>
+    <string name="kf2a5b"> ڇا توهان کي ڊليوري ڪٽ ملي آهي؟ </string>
     <string name="kf2a6"> حصي وٺڻ واري جو شناخت نمبر لکو </string>
     <string name="kf2a7"> داخل ٿيل ماءُ جو نالو </string>
     <string name="kf2a8"> داخل ٿيل ماءُ جو سڃاڻپ نمبر </string>
